--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="//v1.fontapi.ir">
     <link href="https://v1.fontapi.ir/css/Shabnam:100;300;400;500;700" rel="stylesheet">
     <link rel="stylesheet" href="mine.css">
-   <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="icofont/icofont.min.css">
     <title>رزومه ایمان نورالهی</title>
     <link rel="icon" href="user-male.svg">
@@ -41,7 +41,7 @@
         <div class="profile">
             <div class="prof-titer">
                     <span>
-                        <i class="icofont-user-male"></i>
+                        <img src="icons8-user-male.gif" alt="#">
                     </span>
                 <span>درباره من</span>
             </div>
@@ -81,7 +81,7 @@
         <div class="records">
             <div class="record-titer">
                     <span>
-                        <i class="icofont-user-male"></i>
+                           <img src="icons8-user-male.gif" alt="#">
                     </span>
                 <span>سوابق شغلی</span>
             </div>
@@ -94,7 +94,7 @@
         <div class="study">
             <div class="study-titer">
                     <span>
-                        <i class="icofont-user-male"></i>
+                         <img src="icons8-user-male.gif" alt="#">
                     </span>
                 <span>سوابق تحصیلی </span>
             </div>
@@ -112,7 +112,7 @@
         <div class="skills">
             <div class="skill-titer">
                     <span>
-                        <i class="icofont-user-male"></i>
+                      <img src="icons8-user-male.gif" alt="#">
                     </span>
                 <span>مهارت ها </span>
             </div>
