--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a href="prof.jpg"> <img id="img" src="prof.jpg" alt="#"></a>
                 <div id="datalist">
                     <div class="button-back">
-                        <a onclick="buttonBack()"> <i class="icofont-caret-down"></i></a>
+                        <a onclick="buttonBack()"> <img src="caret-down.svg" alt="#"></a>
                     </div>
                     <h4>تماس با من</h4>
                     <span> 0930 521 5922</span>
@@ -57,12 +57,12 @@
                         <ul>
                             <li>
                                 <a href="https://twitter.com/imanne8232">
-                                    <i class=" icon icofont-twitter"></i>
+                                    <img class=" icon img icofont-twitter" src="icons8-twitter-30.png" alt="#">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://instagram.com/iman.n.e">
-                                    <i class=" icon icofont-instagram"></i>
+                                    <img class=" icon img icofont-instagram" src="icons8-instagram-50.png" alt="#">
                                 </a>
                             </li>
                             <li>
