--- a/WorkSamples.html
+++ b/WorkSamples.html
@@ -16,49 +16,44 @@
 </head>
 
 <body>
-<div class="content">
-    <header class="header">
-        <div class="head">
-            <h1>ایمان نورالهی</h1>
-            <h3> توسعه دهنده وب </h3>
-            <div>
-                <a href="index.html" target="_blank">
-                    <img src="photo_2022-06-19_17-51-52.jpg" alt="#">
-                </a>
-            </div>
-        </div>
-    </header>
-    <nav class="navbar">
-        <ul class="menubar">
-            <li>
-                <a href="#">صفحه اصلی</a>
-            </li>
-            <li>
-                <a href="WorkSamples.html">نمونه کار</a>
-            </li>
-            <li>
-                <a onclick="abut()">تماس با من </a>
-            </li>
-            <li class="menubar-abut">
-                <a href="https://twitter.com/imanne8232">
-                    <i class=" icon icofont-twitter"></i>
-                </a>
-            </li>
-            <li class="menubar-abut">
-                <a href="https://instagram.com/iman.n.e">
-                    <i class=" icon icofont-instagram"></i>
-                </a>
-            </li>
-            <li class="menubar-abut">
-                <a href="https://github.com/imanne82">
-                    <img src="icons8-github-96.png" class="icon img" alt="">
-                </a>
-            </li>
-            <li class="btn-back-menu   menubar-abut ">
-                <a onclick="abutBack()"><i class="icofont-caret-right"></i></a>
-            </li>
-        </ul>
-    </nav>
+<!--<div class="content">-->
+<!--    <header class="header">-->
+<!--        <div class="head">-->
+<!--            <h1>ایمان نورالهی</h1>-->
+<!--            <h3> توسعه دهنده وب </h3>-->
+<!--            <div>-->
+<!--                <a href="index.html" target="_blank">-->
+<!--                    <img src="photo_2022-06-19_17-51-52.jpg" alt="#">-->
+<!--                </a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </header>-->
+<!--    <nav class="navbar">-->
+<!--        <ul class="menubar">-->
+<!--            <li>-->
+<!--                <a href="index.html">صفحه اصلی</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a href="WorkSamples.html">نمونه کار</a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a href="#">تماس با من </a>-->
+<!--            </li>-->
+<!--            <li class="menubar-abut">-->
+<!--                <a href="https://twitter.com/imanne8232">-->
+<!--                    <i class=" icon icofont-twitter"></i>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </nav>-->
+<!--</div>-->
+
+<div>
+    <span>در حال بازسازی   <img src="exclamation-tringle.svg" ></span>
+
+</div>
+<div>
+<a href="index.html">صفحه اصلی</a>
 </div>
 </body>
 <script src="Work.js"></script>
